--- a/games/edgesurf/manifest.json
+++ b/games/edgesurf/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "SURF",
-    "name": "Microsoft Edge SURF",
+    "short_name": "Surf Offline",
+    "name": "MSE Surf Offline",
     "icons": [
         {
             "src": "resources/icons/android-icon-36x36.png",
@@ -44,10 +44,10 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "/",
-    "version": "1.1",
-    "background_color": "#243A5E",
+    "start_url": "/games/edgesurf/",
+    "version": "1.0",
+    "background_color": "#20B2AA",
     "display": "fullscreen",
-    "scope": "/",
-    "theme_color": "#243A5E"
+    "scope": "/games/edgesurf/",
+    "theme_color": "#20B2AA"
 }
