--- a/games/edgesurf/manifest.json
+++ b/games/edgesurf/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Surf Offline",
-    "name": "MSE Surf Offline",
+    "name": "Surf Offline",
     "icons": [
         {
             "src": "resources/icons/android-icon-36x36.png",
